<resources>
    <string name="app_name">Hungry Penguin</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sample">Restaurants</string>
    <string name="title_activity_checkout_activity">Checkout</string>
    <string name="title_activity_post_order">Post Order</string>
    <string name="title_activity_food_detail">Sides</string>
    <string name="action_checkout">Checkout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_profile">Profile</string>
    <string name="action_order_history">Order History</string>
    <string name="action_logout">Logout</string>
    <string name="call_human">Call a Human!</string>
    <string name="review">Leave a review</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="profile_email">EMAIL: user123@gmail.com</string>
    <string name="restaurant1">The Sandwich Spot</string>
    <string name="restaurant2">Bibimbowl</string>
    <string name="dish1">Croissaint</string>
    <string name="dish2">Bagel</string>
    <string name="dish3">Noodles</string>
    <string name="title">Title</string>
    <string name="dishNameText">dishname</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_firstname">Enter First Name</string>
    <string name="prompt_lastname">Enter Last Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>

    <string name="facebook_app_id">1578164949142166</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
</resources>