<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RestaurantDetailActivity">
    <item
        android:id="@+id/action_checkout"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="1"
        android:title="@string/action_checkout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never"
        android:onClick="showProfile"/>
    <item
        android:id="@+id/action_order_history"
        android:orderInCategory="100"
        android:title="@string/action_order_history"
        app:showAsAction="never"
        android:onClick="showHistory"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:onClick="logout"/>
</menu>
