<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.archanaiyer.hungrypenguin.ui.PostOrderActivity">

    <Button
        android:id="@+id/call_human"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="callHuman"
        android:text="@string/call_human" />

    <Button
        android:id="@+id/leave_review"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="leaveReview"
        android:text="@string/review" />

    <Button
        android:id="@+id/pay_bill"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="payBill"
        android:text="@string/pay_bill" />

</LinearLayout>
