<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.archanaiyer.hungrypenguin.ui.OrderHistoryActivity">

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/restaurant1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/dish1"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/restaurant2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/dish2"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/order2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/dish3"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
